--- a/fd-calculator.html
+++ b/fd-calculator.html
@@ -17,19 +17,18 @@
         <div class="header-container">
             <div class="header-left">
                 <img src="assets/icons/destiny-icon.png" class="header-logo">
-                <h2 class="header-logo-text">Financial Calculator</h2>
+                <h2 class="header-logo-text">FD Calculator</h2>
             </div>
             <div class="header-right">
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
                     <li class="nav-item" id="navDropdownBtn"><a href="#" class="nav-link">Calculators</a>
-                        <span class="chevron">▼</span>
-                    </li>
-                    <ul class="nav-item-dropdown">
-                        <li class="nav-item"><a href="fd-calculator.html" class="nav-link">FD Calculator</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">FD Calculator</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">FD Calculator</a></li>
-                    </ul>
+                        <span class="chevron">▼</span></li>
+                        <ul class="nav-item-dropdown">
+                            <li class="nav-item"><a href="#" class="nav-link">FD Calculator</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">FD Calculator</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">FD Calculator</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Other Projects</a></li>
@@ -42,17 +41,6 @@
             <h2 class="banner-title">Start your financial planning today!</h2>
             <p class="banner-desc">Use our simple and easy to use calculators to help plan your financial goals</p>
             <a class="banner-btn">Calculators</a>
-        </div>
-    </div>
-    <div class="content-block">
-        <div class="content-block-container flex-container">
-            <div class="content-block-left"></div>
-            <div class="content-block-right"></div>
-        </div>
-    </div>
-    <div class="content-block purple-bg">
-        <div class="content-block-container">
-
         </div>
     </div>
     <div class="content-block">
@@ -86,12 +74,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <footer class="footer">
-        <div class="footer-container">
 
-        </div>
-    </footer>
+    </div>
     <script src="js/script.js"></script>
 </body>
 
