--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <h2 class="card__title">FD Calculator</h2>
                         <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="card-link"><span class="card-link-text">Calculate Now</span><img
+                        <a href="fd-calculator.html" class="card-link"><span class="card-link-text">Calculate Now</span><img
                                 class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
                 </div>
@@ -245,7 +245,7 @@
                         <h2 class="card__title">RD Calculator</h2>
                         <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="card-link"><span class="card-link-text">Calculate Now</span><img
+                        <a href="rd-calculator.html" class="card-link"><span class="card-link-text">Calculate Now</span><img
                                 class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
                 </div>
@@ -255,7 +255,7 @@
                         <h2 class="card__title">EMI Calculator</h2>
                         <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="card-link"><span class="card-link-text">Calculate Now</span><img
+                        <a href="emi-calculator.html" class="card-link"><span class="card-link-text">Calculate Now</span><img
                                 class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
                 </div>
